<resources>
    <string name="txt_nombre_aplicacion">Servicios Asu</string>
    <string name="txt_cargando">Cargando, &#8230;</string>
    <string name="txt_desarrollado_por">Desarrollado por: </string>
    <string name="txt_desarrollador" translatable="false">Vicente Insfán</string>
    <string name="txt_copyright" translatable="false">© 2016</string>
    <string name="txt_consulta_expediente" translatable="false">Consulta de expedientes</string>
    <string name="txt_reclamos_en_linea" translatable="false">Reclamos en linea</string>
    <string name="action_settings">Settings</string>
</resources>
